<resources>
    <string name="set_save_image_storage_settings">Image storage settings</string>
    <string name="set_save_storage_location">Storage location:</string>
    <string name="set_save_select">Select</string>
    <string name="set_save_fileformat">Filename format (without extension):</string>
    <string name="set_save_preset">Preset</string>
    <string name="set_save_vide_storage_settings">Video storage settings</string>
    <string name="set_save_datedir">Create new directory for each day</string>
    <string name="set_bracketing_header">Bracketing Settings</string>
    <string name="set_bracketing_delay_title">Bracket delay</string>
    <string name="set_bracketing_delay_summary">Number of seconds until the bracketing starts.</string>
    <string name="set_bracketing_af_title">Autofocus before each picture</string>
    <string name="set_bracketing_af_summary">Focuses before each capture. This option is recommended to be disabled if you plan to stitch pictures.</string>
    <string name="set_bracketing_ep1_title">Exposure compensation #1</string>
    <string name="set_bracketing_ep1_summary">Exposure compensation for first picture.</string>
    <string name="set_bracketing_ep2_title">Exposure compensation #2</string>
    <string name="set_bracketing_ep2_summary">Exposure compensation for second picture.</string>
    <string name="set_bracketing_ep3_title">Exposure compensation #3</string>
    <string name="set_bracketing_ep3_summary">Exposure compensation for third picture.</string>
    <string name="set_bracketing_ep4_title">Exposure compensation #4</string>
    <string name="set_bracketing_ep4_summary">Exposure compensation for 4th picture.</string>
    <string name="set_bracketing_ep5_title">Exposure compensation #5</string>
    <string name="set_bracketing_ep5_summary">Exposure compensation for 5th picture.</string>
    <string name="set_bracketing_ep6_title">Exposure compensation #6</string>
    <string name="set_bracketing_ep6_summary">Exposure compensation for 6th picture.</string>
    <string name="set_bracketing_ep7_title">Exposure compensation #7</string>
    <string name="set_bracketing_ep7_summary">Exposure compensation for 7th picture.</string>
    <string name="set_bracketing_ep8_title">Exposure compensation #8</string>
    <string name="set_bracketing_ep8_summary">Exposure compensation for 8th picture.</string>
    <string name="set_bracketing_ep9_title">Exposure compensation #9</string>
    <string name="set_bracketing_ep9_summary">Exposure compensation for 9th picture.</string>
    <string name="set_bracketing_ep10_title">Exposure compensation #10</string>
    <string name="set_bracketing_ep10_summary">Exposure compensation for 10th picture.</string>
    <string name="set_video_header">Video Settings</string>
    <string name="set_video_note">NOTE: video mode is still in beta (testing) state!</string>
    <string name="set_video_profile_title">Video profile</string>
    <string name="set_video_profile_summary">Select a video quality setting from predefined profiles.</string>
    <string name="set_video_duration_title">Maximum recording duration</string>
    <string name="set_video_duration_summary">This value specifies the maximum length of a video file in seconds. Set the number to 0 for automatic selection.</string>
    <string name="set_video_filesize_title">Maximum file size</string>
    <string name="set_video_filesize_summary">This value specifies the maximum file size of a video file in MB. Set the number to 0 for automatic selection.</string>
    <string name="set_video_autosplit_title">Automatic file splitting</string>
    <string name="set_video_autosplit_summary">"If selected, then a new video file is automatically created when the maximum recording duration or maximum file size has been reached. This is useful to circumvent phone's recording limitations."</string>
    <string name="set_video_autoplay_title">Play video after capturing</string>
    <string name="set_video_autoplay_summary">If selected then video is played with the default player app after recording (only if automatic file splitting is disabled).</string>
    <string name="set_video_expert_title">Enable video expert mode</string>
    <string name="set_video_expert_summary">If selected then the video profile selection from above will be ignored. NOTE: this mode might result in setting combinations which DO NOT work. Please use this only if you know what you are doing.</string>
    <string name="set_video_copyprofile_title">Copy profile settings</string>
    <string name="set_video_copyprofile_summary">If selected then the default values from the profile will be copied when the profile is changed as initial values for the expert settings.</string>
    <string name="set_video_splitdelay_title">Video split delay</string>
    <string name="set_video_splitdelay_summary">This value specifies the delay in ms between splits for automatic file splitting. This delay is required for camera initialization and causes a gap in the video. Recommended: 1000ms or higher.</string>
    <string name="set_video_record_audio_title">Record audio</string>
    <string name="set_video_audiochannels_title">Number audio channels</string>
    <string name="set_video_audiochannels_summary">Set the number to 0 for automatic selection.</string>
    <string name="set_video_audiocodec_title">Audio codec</string>
    <string name="set_video_audiobitrate_title">Audio encoding bit rate</string>
    <string name="set_video_audiobitrate_summary">The bit rate used for audio recording in bits/second. Set this value to 0 for automatic selection.</string>
    <string name="set_video_audiosamplingrate_title">Audio sampling rate</string>
    <string name="set_video_audiosamplingrate_summary">The audio sampling rate in samples/second. Set this setting to 0 for automatic selection.</string>
    <string name="set_video_capturerate_title">Video capture rate</string>
    <string name="set_video_capturerate_summary">Set this to 0 for automatic selection. This value can be used to specify different values for capturing and playback rate. This option works ONLY in Android 3 and later with TIME-LAPSE profiles!</string>
    <string name="set_video_outputformat_title">Video output format</string>
    <string name="set_video_outputformat_summary">The video container output format.</string>
    <string name="set_video_codec_title">Video codec</string>
    <string name="set_video_codec_summary">The video encoding format.</string>
    <string name="set_video_bitrate_title">Video encoding bit rate</string>
    <string name="set_video_bitrate_summary">The bit rate used for video recording in bits/second. Set this value to 0 for automatic selection.</string>
    <string name="set_video_framerate_title">Video frame rate</string>
    <string name="set_video_framerate_summary">The video frame rate in frames/second. The actual frame rate can vary depending on device implementation and lighting conditions. Set this value to 0 for automatic selection.</string>
    <string name="set_video_width_title">Video size width</string>
    <string name="set_video_width_summary">Set the video width. If either video width or height are set to 0 then the size is automatically selected.</string>
    <string name="set_video_height_title">Video size height</string>
    <string name="set_video_height_summary">Sets the video heigth. If either video width or height are set to 0 then the size is automatically selected.</string>
    <string name="set_gen_header">CameraPro General Settings</string>
    <string name="set_gen_zoomslider_title">Show zoom slider</string>
    <string name="set_gen_zoomslider_summary">This option affects only devices which support zooming.</string>
    <string name="set_gen_volumekeys_title">Use volume keys for capturing</string>
    <string name="set_gen_volumekeys_summary">If selected, the increase volume key is used for focusing, and the decrease volume key for capturing. Else volume keys are used for zooming (if supported).</string>
    <string name="set_gen_resetapp_title">Reset settings after start</string>
    <string name="set_gen_resetapp_summary">Sets all camera parameters to default when CameraPro is started.</string>
    <string name="set_gen_mediabutton_title">Capture with media button</string>
    <string name="set_gen_mediabutton_summary">"If selected, then the headset's media button can be used for capturing."</string>
    <string name="set_gen_defaultapp_title">Default camera app</string>
    <string name="set_gen_defaultapp_summary">If selected, then CameraPro will be started when the hardware shutter button is pressed (if available).</string>
    <string name="set_gen_warnexit_title">Warn before exit</string>
    <string name="set_gen_warnexit_summary">If selected, then an alert will be shown when the back-button is pressed.</string>
    <string name="set_gen_shuttersound_title">Enable shutter sound</string>
    <string name="set_gen_shuttersound_summary">Play a sound during capture if phone is not muted. This option does not work on all devices.</string>
    <string name="set_gen_touchfocus_title">Enable touch focus</string>
    <string name="set_gen_touchfocus_summary">Android 4+: if selected then focus is calculated within the focusing rectangle. Else focus areas are automatically adjusted.</string>
    <string name="set_gen_focusrect_title">Show focus rectangle</string>
    <string name="set_gen_focusrect_summary">If selected, a focusing rectangle is shown when the current focus mode supports variable focus distances.</string>
    <string name="set_gen_focusbtn_title">Show focus button</string>
    <string name="set_gen_focusbtn_summary">If selected, a focus button is shown when the current focus mode supports variable focus distances.</string>
    <string name="set_gen_fullscreenviewfinder_title">Fullscreen viewfinder</string>
    <string name="set_gen_fullscreenviewfinder_summary">If selected, the viewfinder is (eventually) expanded to fullscreen.</string>
    <string name="set_gen_vfresolution_title">Viewfinder resolution</string>
    <string name="set_gen_geo_title">Enable geo-tagging</string>
    <string name="set_gen_geo_summary">Tag photos (and video starting with Android 4) with GPS position if GPS is available.</string>
    <string name="set_gen_unsupportedcontrols_title">Show unsupported controls</string>
    <string name="set_gen_unsupportedcontrols_summary">If selected, then controls such as metering, ISO, etc. are shown, even if they might not work on your phone model.</string>
    <string name="set_gen_grid_title">Number of grid lines.</string>
    <string name="set_gen_grid_summary">The number of horizontal and vertical grid lines displayed when grid is enabled.</string>
    <string name="set_gen_htcfix_title">HTC fix</string>
    <string name="set_gen_htcfix_summary">If camera images are distored on HTC devices, then select this option.</string>
    <string name="set_gen_orientationfix_title">Orientation fix</string>
    <string name="set_gen_orientationfix_summary">If the camera viewgfinder orientation is wrong, then activate this fix (e.g. on the LG P500).</string>
    <string name="set_gen_sourcecamera_title">Source camera</string>
    <string name="set_gen_sourcecamera_summary">Select between back and front camera (if supported). Video recording does not work with the front camera.</string>
    <string name="set_gen_design_title">UI design</string>
    <string name="set_gen_design_summary">Design used for the camera user interface.</string>
    <string name="set_gen_uialpha_title">Screen UI alpha</string>
    <string name="set_gen_uialpha_summary">Sets the transparency of the screen user interface controls.</string>
    <string name="set_gen_whiteicons_title">Use white menu icons</string>
    <string name="set_gen_menutext_title">Show menu text</string>
    <string name="set_gen_menutext_summary">Shows or hides the text below menu items.</string>
</resources>