<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/set_video_header"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/set_video_note" />
    <ListPreference android:title="@string/set_video_profile_title" android:key="videoprofile" android:summary="@string/set_video_profile_summary" />
    <EditTextPreference android:title="@string/set_video_duration_title" android:key="maxduration" android:summary="@string/set_video_duration_summary" />
    <EditTextPreference android:title="@string/set_video_filesize_title" android:key="maxfilesize" android:summary="@string/set_video_filesize_summary" />
    <CheckBoxPreference android:title="@string/set_video_autosplit_title" android:key="automaticnewfile" android:summary="@string/set_video_autosplit_summary" />
    <CheckBoxPreference android:title="@string/set_video_autoplay_title" android:key="playvideoaftercapture" android:summary="@string/set_video_autoplay_summary" />
    <CheckBoxPreference android:title="@string/set_video_expert_title" android:key="videoexpert" android:summary="@string/set_video_expert_summary" />
    <CheckBoxPreference android:title="@string/set_video_copyprofile_title" android:key="copyprofilesettings" android:summary="@string/set_video_copyprofile_summary" />
    <EditTextPreference android:title="@string/set_video_splitdelay_title" android:key="videosplitdelay" android:summary="@string/set_video_splitdelay_summary" />
    <CheckBoxPreference android:title="@string/set_video_record_audio_title" android:key="recordaudio" />
    <EditTextPreference android:title="@string/set_video_audiochannels_title" android:key="audiochannels" android:summary="@string/set_video_audiochannels_summary" />
    <ListPreference android:title="@string/set_video_audiocodec_title" android:key="audioencoder" />
    <EditTextPreference android:title="@string/set_video_audiobitrate_title" android:key="audiobitrate" android:summary="@string/set_video_audiobitrate_summary" />
    <EditTextPreference android:title="@string/set_video_audiosamplingrate_title" android:key="audiosamplingrate" android:summary="@string/set_video_audiosamplingrate_summary" />
    <EditTextPreference android:title="@string/set_video_capturerate_title" android:key="videocapturerate" android:summary="@string/set_video_capturerate_summary" />
    <ListPreference android:title="@string/set_video_outputformat_title" android:key="videooutputformat" android:summary="@string/set_video_outputformat_summary" />
    <ListPreference android:title="@string/set_video_codec_title" android:key="videoencoder" android:summary="@string/set_video_codec_summary" />
    <EditTextPreference android:title="@string/set_video_bitrate_title" android:key="videobitrate" android:summary="@string/set_video_bitrate_summary" />
    <EditTextPreference android:title="@string/set_video_framerate_title" android:key="videoframerate" android:summary="@string/set_video_framerate_summary" />
    <EditTextPreference android:title="@string/set_video_width_title" android:key="videosizewidth" android:summary="@string/set_video_width_summary" />
    <EditTextPreference android:title="@string/set_video_height_title" android:key="videosizeheight" android:summary="@string/set_video_height_summary" />
</PreferenceScreen>
