<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/set_gen_header"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference android:title="@string/set_gen_zoomslider_title" android:key="zoomslider" android:summary="@string/set_gen_zoomslider_summary" />
    <CheckBoxPreference android:title="@string/set_gen_volumekeys_title" android:key="volumekeysforshutter" android:summary="@string/set_gen_volumekeys_summary" />
    <CheckBoxPreference android:title="@string/set_gen_resetapp_title" android:key="settodefault" android:summary="@string/set_gen_resetapp_summary" />
    <CheckBoxPreference android:title="@string/set_gen_mediabutton_title" android:key="useMediaButtonForCapturing" android:summary="@string/set_gen_mediabutton_summary" />
    <CheckBoxPreference android:title="@string/set_gen_defaultapp_title" android:key="launchcamprobutton" android:summary="@string/set_gen_defaultapp_summary" />
    <CheckBoxPreference android:title="@string/set_gen_warnexit_title" android:key="askbeforeexit" android:summary="@string/set_gen_warnexit_summary" />
    <CheckBoxPreference android:title="@string/set_gen_shuttersound_title" android:key="shuttersound" android:summary="@string/set_gen_shuttersound_summary" />
    <CheckBoxPreference android:title="@string/set_gen_touchfocus_title" android:key="touchfocus" android:summary="@string/set_gen_touchfocus_summary" />
    <CheckBoxPreference android:title="@string/set_gen_focusrect_title" android:key="showfocusingrect" android:summary="@string/set_gen_focusrect_summary" />
    <CheckBoxPreference android:title="@string/set_gen_focusbtn_title" android:key="showfocusingbutton" android:summary="@string/set_gen_focusbtn_summary" />
    <CheckBoxPreference android:title="@string/set_gen_fullscreenviewfinder_title" android:key="fullscreenviewfinder" android:summary="@string/set_gen_fullscreenviewfinder_summary" />
    <ListPreference android:title="@string/set_gen_vfresolution_title" android:key="viewfinderresolution" />
    <CheckBoxPreference android:title="@string/set_gen_geo_title" android:key="geotagging" android:summary="@string/set_gen_geo_summary" />
    <CheckBoxPreference android:title="@string/set_gen_unsupportedcontrols_title" android:key="showunsupportedcontrols" android:summary="@string/set_gen_unsupportedcontrols_summary" />
    <EditTextPreference android:title="@string/set_gen_grid_title" android:key="gridcells" android:summary="@string/set_gen_grid_summary" />
    <CheckBoxPreference android:title="@string/set_gen_htcfix_title" android:key="htcfix" android:summary="@string/set_gen_htcfix_summary" />
    <CheckBoxPreference android:title="@string/set_gen_orientationfix_title" android:key="lgOrientationFix" android:summary="@string/set_gen_orientationfix_summary" />
    <ListPreference android:title="@string/set_gen_sourcecamera_title" android:key="sourcecamera" android:summary="@string/set_gen_sourcecamera_summary" />
    <ListPreference android:entries="@array/design_names" android:title="@string/set_gen_design_title" android:key="guidesign" android:summary="@string/set_gen_design_summary" android:entryValues="@array/design_keys" />
    <com.tequnique.camerax.SeekBarPreference android:max="255" android:text="" android:title="@string/set_gen_uialpha_title" android:key="menualpha" android:summary="@string/set_gen_uialpha_summary" android:defaultValue="180" android:dialogMessage="" />
    <CheckBoxPreference android:title="@string/set_gen_whiteicons_title" android:key="whiteicons" />
    <CheckBoxPreference android:title="@string/set_gen_menutext_title" android:key="showmenutext" android:summary="@string/set_gen_menutext_summary" />
</PreferenceScreen>
